--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bg_app">#FF1E2B2E</color>
+    <color name="bg_card_mapala">#FF111819</color>
+    <color name="bg_gray">#FF8B8F8F</color>
 </resources>
