add ui for addAksi, forum (home), profile, and shop (home)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_green">#FF1E2B2E</color>
+    <color name="light_gray">#FFECECEC</color>
+    <color name="logout_red">#FFFF3434</color>
+    <color name="navigation_green">#FF11181A</color>
+    <color name="icon_gray">#FFECECEC</color>
 </resources>
