home, donate, and leaderboard page

--- a/app/src/main/res/layout/donator_card.xml
+++ b/app/src/main/res/layout/donator_card.xml
@@ -13,14 +13,14 @@
         android:paddingHorizontal="32dp"
         android:paddingVertical="16dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageView4"
             android:layout_width="40dp"
             android:layout_height="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:src="@drawable/luffy_profile" />
 
         <TextView
             android:id="@+id/textView5"
