--- a/app/src/main/res/layout/activity_detail_aksi.xml
+++ b/app/src/main/res/layout/activity_detail_aksi.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_app"
-    tools:context=".ui.activities.DetailAksiActivity">
+    tools:context=".ui.detailaksi.DetailAksiActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -114,14 +114,14 @@
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="16dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imageView4"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    android:src="@drawable/luffy_profile" />
 
                 <TextView
                     android:id="@+id/textView5"
