--- a/app/src/main/res/layout/activity_detail_aksi.xml
+++ b/app/src/main/res/layout/activity_detail_aksi.xml
@@ -212,7 +212,7 @@
             app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/tvBantuDonasi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
