finish add aksi, minor changes on profile, add adapter for forums feature

--- a/app/src/main/res/layout/activity_detail_aksi.xml
+++ b/app/src/main/res/layout/activity_detail_aksi.xml
@@ -121,7 +121,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:src="@drawable/luffy_profile" />
+                    android:src="@drawable/mahacitalogo" />
 
                 <TextView
                     android:id="@+id/textView5"
