--- a/app/src/main/res/layout/aksi_card.xml
+++ b/app/src/main/res/layout/aksi_card.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="224dp"
     android:layout_height="wrap_content"
+    android:layout_marginEnd="8dp"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,6 +22,8 @@
 
         <TextView
             android:id="@+id/textView22"
+            android:minLines="2"
+            android:maxLines="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -38,6 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:maxLines="3"
+            android:ellipsize="end"
             android:text="@string/deskripsi_aksi"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
