finish aksi berlangsung page, add icon, and add onboarding viewmodel

--- a/app/src/main/res/layout/aksi_card.xml
+++ b/app/src/main/res/layout/aksi_card.xml
@@ -14,21 +14,21 @@
             android:id="@+id/imageView9"
             android:layout_width="match_parent"
             android:layout_height="80dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bg_sampah_home"
-            android:scaleType="centerCrop"/>
+            app:srcCompat="@drawable/bg_sampah_home" />
 
         <TextView
             android:id="@+id/textView22"
-            android:minLines="2"
-            android:maxLines="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:maxLines="2"
+            android:minLines="2"
             android:text="Bersihkan Sungai Musi"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,8 +41,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:maxLines="3"
             android:ellipsize="end"
+            android:justificationMode="inter_word"
+            android:maxLines="3"
             android:text="@string/deskripsi_aksi"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
