--- a/app/src/main/res/layout/item_shop_card.xml
+++ b/app/src/main/res/layout/item_shop_card.xml
@@ -34,10 +34,11 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:ellipsize="end"
+            android:justificationMode="inter_word"
             android:maxLines="2"
+            android:textColor="@color/navigation_green"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:textColor="@color/navigation_green"
             app:layout_constraintBottom_toTopOf="@+id/tv_price"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,12 +49,12 @@
             android:id="@+id/tv_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:layout_marginEnd="16dp"
-            android:textSize="14sp"
             android:textColor="@color/navigation_green"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="2000 Point" />
