--- a/app/src/main/res/layout/item_article_card.xml
+++ b/app/src/main/res/layout/item_article_card.xml
@@ -14,24 +14,24 @@
             android:id="@+id/iv_cover"
             android:layout_width="match_parent"
             android:layout_height="80dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bg_sampah_home"
-            android:scaleType="centerCrop" />
+            app:srcCompat="@drawable/bg_sampah_home" />
 
         <TextView
             android:id="@+id/textView22"
-            android:minLines="2"
-            android:maxLines="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="4dp"
-            android:textSize="10sp"
+            android:layout_marginEnd="8dp"
             android:ellipsize="end"
+            android:maxLines="2"
+            android:minLines="2"
             android:text="Bersihkan Sungai Musi"
+            android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,13 +43,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:maxLines="3"
+            android:layout_marginBottom="8dp"
             android:ellipsize="end"
+            android:justificationMode="inter_word"
+            android:maxLines="3"
             android:text="@string/deskripsi_aksi"
             android:textSize="10sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView22" />
     </androidx.constraintlayout.widget.ConstraintLayout>
