--- a/app/src/main/res/layout/item_feed_card.xml
+++ b/app/src/main/res/layout/item_feed_card.xml
@@ -96,6 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
+            android:justificationMode="inter_word"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -168,14 +169,14 @@
             android:layout_marginVertical="16dp"
             android:background="@android:color/transparent"
             android:drawableLeft="@drawable/baseline_comment_24"
-            tools:text="@tools:sample/us_zipcodes"
             android:textColor="@color/black"
             android:textSize="12sp"
-            tools:ignore="RtlHardcoded"
-            app:layout_constraintTop_toBottomOf="@id/iv_content_picture"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_share"
             app:layout_constraintStart_toEndOf="@id/vote_container"
-            app:layout_constraintEnd_toStartOf="@id/btn_share"/>
+            app:layout_constraintTop_toBottomOf="@id/iv_content_picture"
+            tools:ignore="RtlHardcoded"
+            tools:text="@tools:sample/us_zipcodes" />
 
         <Button
             android:id="@+id/btn_share"
