--- a/app/src/main/res/layout/activity_choose_role.xml
+++ b/app/src/main/res/layout/activity_choose_role.xml
@@ -34,15 +34,14 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewUser"
-        android:layout_width="0dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="44dp"
-        android:layout_marginEnd="8dp"
         app:cardCornerRadius="10sp"
-        app:layout_constraintEnd_toStartOf="@+id/cardViewOrg"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView35">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView35"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -75,15 +74,13 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewOrg"
-        android:layout_width="0dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
         app:cardCornerRadius="10sp"
-        app:layout_constraintStart_toEndOf="@+id/cardViewUser"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cardViewUser"
-        app:layout_constraintBottom_toBottomOf="@+id/cardViewUser">
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="@+id/cardViewUser"
+        app:layout_constraintEnd_toEndOf="@id/cardViewUser"
+        app:layout_constraintTop_toBottomOf="@+id/cardViewUser">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
