--- a/app/src/main/res/layout/aksi_card.xml
+++ b/app/src/main/res/layout/aksi_card.xml
@@ -44,6 +44,7 @@
             android:ellipsize="end"
             android:justificationMode="inter_word"
             android:maxLines="3"
+            android:minLines="3"
             android:text="@string/deskripsi_aksi"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
